src/style.scss
/* ... */
.arrow {
  position: absolute;
  left: 0;
  right: 0;
  margin: auto;
  bottom: 3vh;
}


/* unused particle system
#radar > .sketch {
  position: absolute;
  z-index: -3;
  top: $body-border;
  left: 0;
  opacity: 1;
}
*/

#hero-bg {
  width: 100vw;
  height: 100vh;
  position: absolute;
  z-index: -4;
  top: 0;
  left: 0;
  background-image: url('images/hero4.jpg')
}

#container>.sketch {
  position: absolute;
  filter: blur(5px);
  z-index: -3;
  top: $body-border;
  left: 0;
  opacity: .2
}

footer {
  background-color: #fcfcfc;
  border-top: 1px solid #efefef;
  padding: 13px 70px;
  font-size: .75em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  @media (max-width: $br-medium) {
    padding: 20px 30px;
    align-items: flex-start;
    p:last-child {
      text-align: right;
    }
  }
}

.social {
  display: flex;
  align-items: center;
  opacity: .6;
  a {
    margin: 0 8px;
    box-shadow: none;
    img {
      height: 20px;
      opacity: .7;
      box-shadow: none;
    }
    &:last-child {
      img {
        height: 25px;
      }
    }
  }
}

.borderside {
  z-index: 1;
  border: $body-border rgba(255, 255, 255, .1) solid;
  position: absolute;
  pointer-events: none;
  width: calc(100vw - calc(#{$body-border} * 2));
  height: 100vh;
  top: 0;
  left: 0;
  @media (max-width: $br-small) {
    display:none;
  }
}

.fade-in {
  opacity: 0;
  transform: translateY(3px);
}

::selection {
  background: rgba(0, 88, 255, 0.11);
}

::-moz-selection {
  background: rgba(0, 88, 255, 0.11);
}

@media (max-width: $br-medium) {
  .hide-mobile {
    display: none;
  }
}

@media (min-width: $br-medium) {
  .hide-desktop {
    display: none;
  }
}

.hidden {
  visibility: hidden;
  opacity: 0;
}

.center {
  text-align: center;
  margin: 0 auto;
}

